--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,7 @@
             "email": "olegv@semalt.com"
         }
     ],
-    "require": {}
+    "autoload": {
+		"psr-0": {"HttpClient": "."}
+	}
 }
