--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
             "name": "Oleg V",
             "email": "olegv@semalt.com"
         }
-    ]
+    ],
+	"autoload": {
+		"psr-0": { "HttpClient": "src/" }
+	}
 }
