--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         }
     ],
 	"autoload": {
-		"psr-0": { "HttpClient": "src/" }
+		"psr-4": {
+            "HttpClient\\": ["src/"]
+        }
 	}
 }
